--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,10 @@ ul {
 }
 
 /* Шапка профиля */
+.header-div {
+  display: flex;
+  align-items: center;
+}
 .logo {
   color: var(--basic-black-color);
   text-decoration: none;
@@ -52,6 +56,8 @@ ul {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
+
+  margin-right: 93px;
 }
 
 .span {
@@ -60,6 +66,15 @@ ul {
 .link-ul-page {
   margin-top: 0;
   margin-bottom: 0;
+  display: flex;
+}
+/* контакты в шапке */
+.link-ul-contact {
+  display: flex;
+  margin-left: auto;
+}
+.link-li-page:not(:last-child) {
+  margin-right: 50px;
 }
 
 .link-page {
@@ -71,6 +86,10 @@ ul {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .link-page:hover,
@@ -128,12 +147,17 @@ ul {
 .activity-section {
   padding-top: 94px;
   padding-bottom: 94px;
+  
+}
+.activity-li:not(:last-child){
+  margin-right: 30px;
 }
 .activity-title {
   font-size: 14px;
   line-height: 1.14;
   margin-top: 0;
   margin-bottom: 10px;
+
 }
 .activity-text {
   color: var(--secondary-black-color);
@@ -143,13 +167,19 @@ ul {
   line-height: 1.7;
   margin-top: 0;
   margin-bottom: 0;
+  width: 270px;
 }
+
+
+
 /* чем мы занимаемся */
 .direction-section {
   padding-top: 0;
   padding-bottom: 94px;
+  display: flex;
 }
-
+ 
+ 
 .direction {
   font-size: 36px;
   line-height: 1.17;
@@ -158,7 +188,12 @@ ul {
   margin-top: 0;
   margin-bottom: 50px;
 }
-
+.direction-li{
+  width: 370px; 
+  
+}
+.
+}
 /* секция команды */
 
 .command-section {
@@ -169,6 +204,7 @@ ul {
 .command-photo {
   margin-top: 0;
   margin-bottom: 30px;
+  width: 270px;
 }
 .command-title {
   font-weight: 700;
@@ -215,6 +251,7 @@ ul {
 
   margin-top: 0;
   margin-bottom: 20px;
+  display: inline-block;
 }
 
 .footer-adress {
@@ -229,6 +266,7 @@ ul {
   margin-top: 0;
   margin-bottom: 9px;
 }
+
 .footer-nav {
   color: var(--footer-shadowy);
 
@@ -237,6 +275,7 @@ ul {
   line-height: 1.7;
   margin-top: 0;
   margin-bottom: 9px;
+  display: inline-block;
 }
 .footer-nav-tel {
   color: var(--footer-shadowy);
