--- a/css/styles.css
+++ b/css/styles.css
@@ -138,10 +138,21 @@ header {
 }
 /* Середина контента (мейн) */
 
+/* герой */
+.hero {
+  display: flex;
+  height: 600px;
+  max-width: 1600px;
+  margin-left: auto;
+  justify-content: center;
+  margin-right: auto;
+  background-image: url("../images.new/office-copy.jpg");
+  background-color: #2f303a;
+  /* background: rgba(47, 48, 58, 0.4); */
+  /* background-size: contain; */
+}
 /* Секция основная  */
 .main-section {
-  background-color: #2f303a;
-
   font-family: Roboto;
   font-weight: 900;
   font-size: 44px;
@@ -178,6 +189,31 @@ header {
 }
 .activity-item:not(:last-child) {
   margin-right: 30px;
+}
+/* фоновое иконки внимание к деталям */
+.activity-item::before {
+  content: "";
+  display: block;
+  height: 120px;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-color: #f5f4fa;
+  margin-bottom: 30px;
+
+  /* background-image: url("../images.new/antenna.svg"); */
+}
+
+.antenna::before {
+  background-image: url("../images.new/antenna.svg");
+}
+.clock::before {
+  background-image: url("../images.new/clock\ .svg");
+}
+.diagram::before {
+  background-image: url("../images.new/diagram\ .svg");
+}
+.astronaut::before {
+  background-image: url("../images.new/astronaut\ .svg");
 }
 .activity-title {
   font-size: 14px;
@@ -251,6 +287,7 @@ header {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  padding-bottom: 30px;
 }
 .command-person {
   color: var(--secondary-black-color);
@@ -259,7 +296,7 @@ header {
   font-size: 16px;
   line-height: 1.9;
   margin-top: 0;
-  margin-bottom: 30px;
+  margin-bottom: 16px;
 }
 .command-name {
   font-weight: 500;
@@ -269,7 +306,26 @@ header {
   margin-top: 0;
   margin-bottom: 10px;
 }
+/* Иконки соц-сети */
+.social-list {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 32px;
+  padding-left: 32px;
+}
+.social-network {
+  display: block;
+  padding: 12px;
+}
+.social-network:hover,
+.social-network:focus {
+  background-color: var(--blue-color);
+  border-radius: 50%;
+}
 
+.social-network img {
+  display: flex;
+}
 /* Футер страницы */
 
 .footer {
