--- a/css/styles.css
+++ b/css/styles.css
@@ -506,6 +506,13 @@ header {
 .portfolio-item:nth-child(3n) {
   margin-right: 0;
 }
+
+.portfolio-item:hover{
+  background: #FFFFFF;
+border: 1px solid #EEEEEE;
+box-sizing: border-box;
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .portfolio-img {
   margin-top: 0;
   margin-bottom: 20px;
