--- a/css/styles.css
+++ b/css/styles.css
@@ -246,11 +246,40 @@ header {
   margin-bottom: 50px;
 }
 .direction-item {
+  position: relative;
   width: 370px;
 }
 .direction-item:not(:last-child) {
   margin-right: 30px;
 }
+.container-position::before{
+  
+color: var(--white-color);
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+padding: 27px 82px;
+
+
+display: inline-block;
+width: 370px;
+height: 70px;
+
+background-color: rgba(47, 48, 58, 0.8);
+position: absolute;
+top: 224px;
+}
+.mac::before{
+  content: 'ДЕСКОПНЫЕ ПРИЛОЖЕНИЯ';
+}
+.iphone::before{
+  content: 'МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ';
+}
+
+.ipad::before{
+  content: 'ДИЗАЙНЕРСКИЕ РЕШЕНИЯ';  
+}
+
 /* секция команды */
 
 .command-section {
@@ -304,18 +333,23 @@ header {
 }
 
 /* Постоянные клиенты */
+.clients{
+  
+  padding-top: 94px;
+  padding-bottom: 94px;
+
+}
 .clients-list {
   display: flex;
   justify-content: space-between;
 }
 .clients-title {
-  font-style: 400;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.17px;
-  color: var(--basic-black-color);
+  line-height: 1.17;
   text-align: center;
-  margin-top: 94px;
+  margin-top: 0;
+  margin-bottom: 50px;
 }
 .clients-icon {
   display: flex;
@@ -508,19 +542,30 @@ header {
 }
 .container-photo{
   position:relative; 
+  overflow: hidden;
+
+
+
 }
 .container-photo::before{
   display: inline-block;
-  content: "";
+  content: "Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.";
+  color: var(--white-color);
+
+font-weight: normal;
+font-size: 18px;
+line-height: 1.5;
+padding: 63px 24px;
   width: 100%;
   height: 100%;
   background-color: var(--blue-color);
   position: absolute;
-
-  opacity: 0;
+  transform:translateY(100%) ;
+ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ opacity: 0.8;
 }
-.container-photo:hover::before{
-  opacity: 0.8;
+.portfolio-item:hover .container-photo::before{
+  transform: translateY(0);
 }
 
 .portfolio-item:hover{
