--- a/css/styles.css
+++ b/css/styles.css
@@ -227,6 +227,33 @@ header {
   align-items: center;
   justify-content: center;
 }
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.5;
+  text-align: center;
+}
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+.modal-form label {
+  font-size: 12px;
+  line-height: 1.17;
+  color: var(--secondary-black-color);
+  margin-bottom: 4px;
+  margin-top: 10px;
+}
+..modal-form input {
+  width: 448px;
+  height: 40px;
+  color: #2196f3;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
 /* секция чем мы занимаемся */
 .activity-section {
   padding-top: 94px;
