--- a/css/styles.css
+++ b/css/styles.css
@@ -211,6 +211,9 @@ header {
   height: 581px;
   background-color: var(--white-color);
   z-index: 500;
+  padding-right: 40px;
+  padding-left: 40px;
+  padding-top: 40px;
 }
 .button-close {
   position: absolute;
@@ -234,33 +237,41 @@ header {
 .modal-title {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15px;
+  margin-top: 0;
+  margin-bottom: 30px;
+  line-height: 1.15;
   text-align: center;
-  padding-right: 40px;
-  padding-left: 40px;
-  padding-top: 40px;
 }
 .modal-form {
   display: flex;
   flex-direction: column;
-  margin-right: 40px;
-  margin-left: 40px;
-}
-.modal-form label {
-  font-size: 12px;
-  line-height: 1.7;
-  color: var(--secondary-black-color);
-  padding-bottom: 4px;
-  padding-top: 10px;
+
+  position: relative;
 }
 
-.information {
+.information-input {
   width: 448px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
+  margin-top: 0;
 }
+
+.information-input:focus + .information-label {
+  color: var(--blue-color);
+}
+.information-label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-top: 10px;
+  font-size: 12px;
+  line-height: 1.7;
+  color: var(--secondary-black-color);
+  padding-bottom: 4px;
+}
+
 .modal-form textarea {
   resize: none;
   width: 448px;
@@ -270,10 +281,38 @@ header {
   border-radius: 4px;
   padding: 12px 16px;
 }
+.modal-form-container {
+  position: relative;
+  margin-bottom: 28px;
+}
+
+.feedback {
+  margin-bottom: 20px;
+}
+.politics-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.politics-checkbox {
+  width: 15px;
+  height: 15px;
+}
+.politics {
+  font-size: 14px;
+  line-height: 1.7;
+  color: var(--secondary-black-color);
+  margin-left: 7px;
+}
 .politics-contract {
+  font-size: 14px;
+  line-height: 1.7;
   color: var(--blue-color);
 }
+
 .button-form {
+  width: 200px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
@@ -283,6 +322,8 @@ header {
   border-radius: 4px;
   border-style: none;
   cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
 }
 /* секция чем мы занимаемся */
 .activity-section {
@@ -582,6 +623,7 @@ header {
   display: flex;
   flex-direction: row;
 }
+
 .footer-form-title {
   font-weight: 700;
   font-size: 14px;
