--- a/sass/general/_header.scss
+++ b/sass/general/_header.scss
@@ -9,10 +9,17 @@
 
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.2;
 
-  margin-right: 93px;
+  @media screen and (min-width: $tablet) {
+    margin-right: 88px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-right: 93px;
+    font-size: 26px;
+  }
 }
 
 .span {
@@ -22,6 +29,15 @@
   margin-top: 0;
   margin-bottom: 0;
   display: flex;
+
+  @media screen and (min-width: $tablet) {
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  @media screen and (min-width: $desktop) {
+    flex-wrap: nowrap;
+  }
 }
 
 // контакты в шапке  профиля
@@ -29,9 +45,27 @@
 .link-contact {
   display: flex;
   margin-left: auto;
+
+  @media screen and (min-width: $tablet) {
+    flex-direction: column;
+  }
+
+  @media screen and (min-width: $desktop) {
+    flex-direction: row;
+  }
 }
 .link-item-page:not(:last-child) {
-  margin-right: 50px;
+  @media screen and (min-width: $tablet) {
+    margin-right: 50px;
+  }
+}
+.link-contact-item:not(:last-child) {
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 10px;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-right: 50px;
+  }
 }
 .link-active-page {
   position: relative;
@@ -78,13 +112,20 @@
   color: $secondary-black-color;
 
   font-weight: 500;
-  font-size: 14px;
+
   line-height: 1.4;
   letter-spacing: 0.02em;
 
   &:hover,
   &:focus {
     color: $blue-color;
+  }
+  @media screen and (min-width: $tablet) {
+    font-size: 12px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    font-size: 14px;
   }
 }
 
