--- a/sass/main.scss
+++ b/sass/main.scss
@@ -40,9 +40,17 @@ button {
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 1230px;
+
   padding-left: 15px;
   padding-right: 15px;
+
+  @media screen and (min-width: $tablet) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 1230px;
+  }
 }
 .header {
   border: 1px solid #ececec;
