--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,3 +9,6 @@ $blue-color: #2196f3;
 $white-color: #ffffff;
 $secondary-black-color: #757575;
 $footer-shadowy: rgba(255, 255, 255, 0.6);
+
+$tablet: 768px;
+$desktop: 1600px;
